01-detalleproducto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-bogota-ops
  namespace: cp4i
  labels:
    app: dev-bogota-ops
    app.kubernetes.io/part-of: dev-bogota-ops
    app-type: ACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-bogota-ops
  template:
    metadata:
      labels:
        app: dev-bogota-ops
        app.kubernetes.io/part-of: dev-bogota-ops
        app-type: ACE
        deployment: dev-bogota-ops
      annotations:
        openshift.io/generated-by: Devops
    spec:
      serviceAccountName: default
      serviceAccount: default
      volumes:
            - name: ace-config
              emptyDir: {}
           # - name: bars
            #  configMap:
             #  name: bars-helloword
              # defaultMode: 420
      containers:
      - image: docker.io/seberino/ace-mq:1.2
        name: dev-bogota-ops
        imagePullPolicy: Always
        resources:
            requests:
              cpu: 550m
              memory: 600Mi
            limits:
              cpu: 900m
              memory: 700Mi
        readinessProbe:
          exec:
            command:
              - chkacehealthy
            initialDelaySeconds: 330
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
        # livenessProbe:
        #   exec:
        #     command:
        #       - chkacehealthy
        #     initialDelaySeconds: 430
        #     timeoutSeconds: 5
        #     periodSeconds: 60
        #     successThreshold: 1
        #     failureThreshold: 3
        volumeMounts:
            # - name: bars
             #  mountPath: /home/aceuser/initial-config/bars
             - name: ace-config
               mountPath: /home/aceuser/ace-server/run
        ports:
            - containerPort: 1414
              protocol: TCP
            - containerPort: 7600
              protocol: TCP
            - containerPort: 7800
              protocol: TCP
            - containerPort: 7843
              protocol: TCP
            - containerPort: 9157
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
            - containerPort: 9483
              protocol: TCP
